[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlalchemy-metrics"
readme = {file = "README.rst", content-type = "text/x-rst"}
dynamic = ["version"]
authors = [{ name = "Mike Bayer", email = "mike_mp@zzzcomputing.com" }]
description = "Database connection pool / transaction metrics library"
keywords = ["sqlalchemy", "collectd", "prometheus"]
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database :: Front-Ends",
    "Operating System :: OS Independent",
]

dependencies = [
    "SQLAlchemy>=1.3.0"
]

[tool.setuptools]
packages = ["sqlalchemy_metrics"]


[tool.setuptools.dynamic]
version = {attr = "sqlalchemy_metrics.__version__"}

[project.scripts]
connmon = "sqlalchemy_metrics.connmon.main:main"

[project.entry-points."sqlalchemy.plugins"]
collectd = "sqlalchemy_metrics.client.plugin:Plugin"
# prometheus = ...

[tool.mypy]
mypy_path = "./sqlalchemy_metrics/"
strict = false
show_error_codes = true
incremental = true


[tool.black]
line-length = 79
target-version = ['py38']


[tool.pytest.ini_options]
addopts = "--tb native -v -r sfxX --ignore=sqlalchemy -p warnings -p logging --strict-markers"
python_files = "sqlalchemy_metrics/*/test_*.py"
python_classes= "*Test"
