[metadata]

name = sqlalchemy-collectd

version = attr: sqlalchemy_collectd.__version__
description = Send database connection pool stats to collectd
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = sqlalchemy collectd
url = https://github.com/sqlalchemy/sqlalchemy-collectd
author = Mike Bayer
author_email = mike_mp@zzzcomputing.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Database :: Front-Ends

project_urls =
    Issue Tracker=https://github.com/sqlalchemy/sqlalchemy-collectd


[options]
packages = find:
include_package_data = true
zip_safe = false
python_requires = >=3.6

install_requires =
    SQLAlchemy>=1.3.0

[options.packages.find]
exclude =
    examples*
    *.tests

[options.entry_points]
console_scripts =
    connmon = sqlalchemy_collectd.connmon.main:main

sqlalchemy.plugins =
    collectd = sqlalchemy_collectd.client.plugin:Plugin



[egg_info]

[tool:pytest]
addopts= --tb native -v -r fxX --ignore=sqlalchemy
python_files=sqlalchemy_collectd/*/test_*.py
python_classes=*Test


[flake8]
enable-extensions = G
# E203 is due to https://github.com/PyCQA/pycodestyle/issues/373
ignore =
    A003,
    D,
    E203,E305,E711,E712,E721,E722,E741,
    N801,N802,N806,
    RST304,RST303,RST299,RST399,
    W503,W504
exclude = .venv,.git,.tox,dist,doc,*egg,build
import-order-style = google
application-import-names = sqlalchemy_collectd

